# SMTransform

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
scripts/: collect.py  dispatch.py  replay.sh  runner.py  wrapper.py
src/: formula.rs  lib.rs  main.rs  parser.rs  transformations.rs  var_generator.rs
src/grammar/: SMTLIBv2.g4
src/parser/: mod.rs  smtlibv2lexer.rs  smtlibv2listener.rs  smtlibv2parser.rs  smtlibv2visitor.rs
src/transformations/: assert_expand.rs  const_replacer.rs  fusion.rs  mod.rs  var_replacer.rs
