[package]
name = "smtransform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The newest tagged release doesn't work
antlr-rust = { git = "https://github.com/rrevenantt/antlr4rust", rev = "4eecc87e942531fec2d5901af0d138d9339c8e80" }
rand = "0.8.5"
