[package]
name = "smtransform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The newest tagged release doesn't work
antlr-rust = { git = "https://github.com/patrick96/antlr4rust", branch = "fix/build.rs" }
rand = "0.8.5"
rand_pcg = "0.3.1"
serde_json = "1"
clap = { version = "3", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
